# logict

./: .gitignore  logict.cabal
Control/Monad/: Logic.hs
Control/Monad/Logic/: Class.hs
test/: LogicSpec.hs
